--- a/service/src/main/resources/META-INF/properties/prod-us.application.properties
+++ b/service/src/main/resources/META-INF/properties/prod-us.application.properties
@@ -12,7 +12,7 @@ mail.host=email-smtp.us-east-1.amazonaws.com
 mail.user=AKIAILM2MCZLWH6LLBWQ
 mail.password=AlxnDsap3lIu9w2Zfsvvs4ypqd8YwGFu3bkf4v4j6794
 
-email.site.base=http://sgx2.sharefc.com/iframe.html
+email.site.base=https://sgx2.sharefc.com/iframe.html
 email.base=http://sgx2.sharefc.com.s3-website-us-east-1.amazonaws.com
 email.sender=sgx-noreply@wealthmsi.com
 email.verify.email=http://sgx2.sharefc.com.s3-website-us-east-1.amazonaws.com/email/verify.html
@@ -27,9 +27,9 @@ email.cachable.duration=3600000
 enets.merchant.id=897964002
 enets.sales.amount=7500
 #in cents in SGD, 1000 = $10.00
-enets.success.endpoint=https://sgx-api-us.sharefc.com/sgx/purchase/success
-enets.success.redirect=http://sgx2.sharefc.com/iframe.html?page=22
-enets.fail.endpoint=https://sgx-api-us.sharefc.com/sgx/purchase/fail
-enets.fail.redirect=http://sgx2.sharefc.com/iframe.html?page=22
-enets.cancel.endpoint=https://sgx-api-us.sharefc.com/sgx/purchase/cancel
-enets.cancel.redirect=http://sgx2.sharefc.com/iframe.html?page=22
+enets.success.endpoint=https://sgx2.sharefc.com/sgx/purchase/success
+enets.success.redirect=https://sgx2.sharefc.com/iframe.html?page=22
+enets.fail.endpoint=https://sgx2.sharefc.com/sgx/purchase/fail
+enets.fail.redirect=https://sgx2.sharefc.com/iframe.html?page=22
+enets.cancel.endpoint=https://sgx2.sharefc.com/sgx/purchase/cancel
+enets.cancel.redirect=https://sgx2.sharefc.com/iframe.html?page=22
