--- a/trunk/service/src/main/resources/META-INF/properties/application.properties
+++ b/trunk/service/src/main/resources/META-INF/properties/application.properties
@@ -30,6 +30,9 @@ email.watchlist.alert=http://sgx2.sharefc.com.s3-website-us-east-1.amazonaws.com
 email.halfway.expiration.notice.subject=SGX StockFacts Premium Trial: Buy Now 
 email.trialExpired.notice.subject=SGX StockFacts Premium Trial Has Expired
 
+halfway.trial.duration=7
+full.trial.duration=14
+
 list.permitted.exchanges=SGX,CATALIST
 email.cachable=false
 #In MilliSeconds
