--- a/service/pom.xml
+++ b/service/pom.xml
@@ -301,6 +301,12 @@
 			<artifactId>spring-security-web</artifactId>
 			<version>${org.springframework-security-version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.6</version>
+		</dependency>
 
 		<dependency>
 			<groupId>commons-io</groupId>
