--- a/trunk/service/src/main/resources/META-INF/properties/application.properties
+++ b/trunk/service/src/main/resources/META-INF/properties/application.properties
@@ -32,6 +32,8 @@ email.trialExpired.notice.subject=SGX StockFacts Premium Trial Has Expired
 
 halfway.trial.duration=23
 full.trial.duration=45
+#10800 is 3 hours
+password.reset.timer=10800
 
 list.permitted.exchanges=SGX,CATALIST
 email.cachable=false
