--- a/service/src/main/resources/META-INF/properties/prod-sing.application.properties
+++ b/service/src/main/resources/META-INF/properties/prod-sing.application.properties
@@ -30,3 +30,8 @@ enets.fail.endpoint=https://sgx-api-sing.sharefc.com/sgx/purchase/fail
 enets.fail.redirect=http://qaxwww.sgx.com/wps/portal/sgxweb/home/company_disclosure/stockfacts/iframe.html?page=22
 enets.cancel.endpoint=https://sgx-api-sing.sharefc.com/sgx/purchase/cancel
 enets.cancel.redirect=http://qaxwww.sgx.com/wps/portal/sgxweb/home/company_disclosure/stockfacts/iframe.html?page=22
+
+#Quartz Timers
+quartz.expired.email=0 50 18 1/1 * ? *
+quartz.halfway.email=0 40 21 1/1 * ? *
+quartz.watchlist.email=0 0 0 1/1 * ? *
