--- a/trunk/service/src/main/resources/META-INF/properties/application.properties
+++ b/trunk/service/src/main/resources/META-INF/properties/application.properties
@@ -49,3 +49,8 @@ enets.fail.endpoint=http://localhost:8080/sgx/purchase/fail
 enets.fail.redirect=https://www.yahoo.com
 enets.cancel.endpoint=http://localhost:8080/sgx/purchase/cancel
 enets.cancel.redirect=https://www.amazon.com
+
+#Quartz Timers
+quartz.expired.email=0 50 18 1/1 * ? *
+quartz.halfway.email=0 40 21 1/1 * ? *
+quartz.watchlist.email=0 0 0 1/1 * ? *
