--- a/trunk/service/src/main/resources/META-INF/properties/prod-us.application.properties
+++ b/trunk/service/src/main/resources/META-INF/properties/prod-us.application.properties
@@ -33,3 +33,8 @@ enets.fail.endpoint=https://sgx2.sharefc.com/sgx/purchase/fail
 enets.fail.redirect=https://sgx2.sharefc.com/iframe.html?page=22
 enets.cancel.endpoint=https://sgx2.sharefc.com/sgx/purchase/cancel
 enets.cancel.redirect=https://sgx2.sharefc.com/iframe.html?page=22
+
+#Quartz Timers
+quartz.expired.email=0 0 17 1/1 * ? *
+quartz.halfway.email=0 15 17 1/1 * ? *
+quartz.watchlist.email=0 0 0 1/1 * ? *
