--- a/service/src/main/resources/META-INF/properties/prod-sing.application.properties
+++ b/service/src/main/resources/META-INF/properties/prod-sing.application.properties
@@ -24,14 +24,14 @@ email.cachable.duration=3600000
 enets.merchant.id=897964002
 enets.sales.amount=7500
 #in cents in SGD, 1000 = $10.00
-enets.success.endpoint=https://sgx-api-sing.sharefc.com/sgx/purchase/success
+enets.success.endpoint=https://sgx.sharefc.com/sgx/purchase/success
 enets.success.redirect=http://qaxwww.sgx.com/wps/portal/sgxweb/home/company_disclosure/stockfacts/iframe.html?page=22
-enets.fail.endpoint=https://sgx-api-sing.sharefc.com/sgx/purchase/fail
+enets.fail.endpoint=https://sgx.sharefc.com/sgx/purchase/fail
 enets.fail.redirect=http://qaxwww.sgx.com/wps/portal/sgxweb/home/company_disclosure/stockfacts/iframe.html?page=22
-enets.cancel.endpoint=https://sgx-api-sing.sharefc.com/sgx/purchase/cancel
+enets.cancel.endpoint=https://sgx.sharefc.com/sgx/purchase/cancel
 enets.cancel.redirect=http://qaxwww.sgx.com/wps/portal/sgxweb/home/company_disclosure/stockfacts/iframe.html?page=22
 
 #Quartz Timers
 quartz.expired.email=0 50 18 1/1 * ? *
 quartz.halfway.email=0 40 21 1/1 * ? *
-quartz.watchlist.email=0 0 0 1/1 * ? *
+quartz.watchlist.email=0 0 13 1/1 * ? *
