--- a/trunk/service/pom.xml
+++ b/trunk/service/pom.xml
@@ -356,6 +356,14 @@
 			<version>1.4.7</version>
 		</dependency>
 		
+		<!-- Apache Commons Configuration -->
+        <dependency>
+            <groupId>commons-configuration</groupId>
+            <artifactId>commons-configuration</artifactId>
+            <version>1.10</version>
+        </dependency>
+		
+		
 		<!--  eNets -->
 		
 		<dependency>
