--- a/admin-tool/package.json
+++ b/admin-tool/package.json
@@ -42,6 +42,7 @@
     "lodash": "^3.10.1",
     "moment": "^2.10.6",
     "pikaday": "^1.4.0",
+    "store": "^1.3.17",
     "toastr": "^2.1.2"
   }
 }
