--- a/trunk/data/src/main/resources/META-INF/properties/prod-us.application.properties
+++ b/trunk/data/src/main/resources/META-INF/properties/prod-us.application.properties
@@ -1,4 +1,4 @@
-elasticsearch.url=http://sgx-elb-us.sharefc.com:9200
+elasticsearch.url=http://search-fecs-elastic1-j7pmn4h3e4s2gil4kjztl7x32a.ap-southeast-1.es.amazonaws.com:9200
 
 loader.fx.fxBatchSize=100000
 loader.gti.url=https://s3.amazonaws.com/fecs-prod-triggers/sgx/prod-us/uploads/gti.csv
