--- a/pricing/src/main/resources/META-INF/properties/prod-us.application.properties
+++ b/pricing/src/main/resources/META-INF/properties/prod-us.application.properties
@@ -5,7 +5,7 @@ quanthouse.api.port=6051
 
 # backup QH ftp 109.236.202.8
 
-elasticsearch.url=http://search-fecs-elastic1-j7pmn4h3e4s2gil4kjztl7x32a.ap-southeast-1.es.amazonaws.com:9200
+elasticsearch.url=http://sgx-elb-us.sharefc.com:9200
 
 database.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
 database.url=jdbc:sqlserver://sgx-uat.ccqe0wbnbfwr.us-east-1.rds.amazonaws.com:1433;databaseName=sgx;
