--- a/trunk/data/src/main/resources/META-INF/properties/application.properties
+++ b/trunk/data/src/main/resources/META-INF/properties/application.properties
@@ -1,14 +1,26 @@
 elasticsearch.url=http://localhost:9200
-elasticsearch.index.name=sgx_premium
-elasticsearch.index.prefix=sgx_premium_
+elasticsearch.index.name=sgd_premium
+elasticsearch.index.prefix=sgd_premium_
+
+
+elasticsearch.index.usd.prefix=usd_premium_
+elasticsearch.index.hkd.prefix=hkd_premium_
+elasticsearch.index.idr.prefix=idr_premium_
+elasticsearch.index.myr.prefix=myr_premium_
+elasticsearch.index.php.prefix=php_premium_
+elasticsearch.index.thb.prefix=thb_premium_
+elasticsearch.index.twd.prefix=twd_premium_
 
 elasticsearch.previousDay.index.alias=sgx_premium_previous
 
-elasticsearch.index.liveIndexes=sgx,sgx_premium,sgx_premium_previous
+elasticsearch.index.liveIndexes=sgx,sgx_premium,sgx_premium_previous,sgd_premium,sgd_premium_previous,usd_premium,hkd_premium,idr_premium,myr_premium,php_premium,thb_premium,twd_premium  
 
 loader.threads=25
-loader.cron=0 0 16 * * ?
+loader.cron=0 16 22 ? * *
 loader.workdir=/tmp/sgx/
+
+loader1.threads=25
+
 
 indexer.failureThreshold=1
 
