Adding initial code for currency conversion

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -524,8 +524,13 @@
 			<artifactId>opencsv</artifactId>
 			<version>2.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-csv</artifactId>
+			<version>1.2</version>
+		</dependency>
 	</dependencies>
+	
 
 	<distributionManagement>
 		<repository>
