--- a/service/src/main/resources/META-INF/properties/application.properties
+++ b/service/src/main/resources/META-INF/properties/application.properties
@@ -2,6 +2,8 @@ elasticsearch.url=http://localhost:9200
 elasticsearch.index.name=sgx_premium
 elasticsearch.yesterday.index=sgx_premium_previous
 
+currencies.file.location=src/main/resources/data/currencies.csv
+
 database.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
 database.url=jdbc:sqlserver://localhost\\SQLEXPRESS:1433;databaseName=sgx;
 database.user=sa
