Changing file location on api server

--- a/service/src/main/resources/META-INF/properties/prod-us.application.properties
+++ b/service/src/main/resources/META-INF/properties/prod-us.application.properties
@@ -12,6 +12,8 @@ mail.host=email-smtp.us-east-1.amazonaws.com
 mail.user=AKIAILM2MCZLWH6LLBWQ
 mail.password=AlxnDsap3lIu9w2Zfsvvs4ypqd8YwGFu3bkf4v4j6794
 
+currencies.file.location=/mnt/data/currencies.csv
+
 email.site.base=https://sgx2.sharefc.com/iframe.html
 email.base=http://sgx2.sharefc.com.s3-website-us-east-1.amazonaws.com
 email.sender=sgx-noreply@wealthmsi.com
