--- a/trunk/service/pom.xml
+++ b/trunk/service/pom.xml
@@ -52,6 +52,17 @@
 	</repositories>
 
 	<build>
+		<testSourceDirectory>src/test/java</testSourceDirectory>
+		<resources>
+	      <resource>
+	        <directory>src/main/resources</directory>
+	      </resource>
+	    </resources>
+	    <testResources>
+	      <testResource>
+	        <directory>src/test/resources</directory>
+	      </testResource>
+	    </testResources>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
