One more Caching update... Going back to non key caching

--- a/service/src/main/resources/META-INF/properties/application.properties
+++ b/service/src/main/resources/META-INF/properties/application.properties
@@ -1,6 +1,6 @@
 elasticsearch.url=http://localhost:9200
-elasticsearch.index.name=sgx_premium
-elasticsearch.yesterday.index=sgx_premium_previous
+elasticsearch.index.name=sgd_premium
+elasticsearch.yesterday.index=sgd_premium_previous
 
 currencies.file.location=/mnt/data/currencies.csv
 
