Changing index name to sgd_premium

--- a/pricing/src/main/resources/META-INF/properties/application.properties
+++ b/pricing/src/main/resources/META-INF/properties/application.properties
@@ -9,7 +9,7 @@ quanthouse.api.port=6051
 # backup QH ftp 109.236.202.8
 
 elasticsearch.url=http://localhost:9200
-elasticsearch.index.name=sgx_premium
+elasticsearch.index.name=sgd_premium
 
 database.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
 database.url=jdbc:sqlserver://localhost\\SQLEXPRESS:1433;databaseName=sgx;
