changing prod to point to test enets site

--- a/service/src/main/resources/META-INF/properties/prod-sing.application.properties
+++ b/service/src/main/resources/META-INF/properties/prod-sing.application.properties
@@ -21,7 +21,9 @@ email.reset.confirm=https://sgx.sharefc.com/email/confirm.html
 email.cachable=true
 email.cachable.duration=3600000
 
-enets.merchant.id=888464000
+#enets.merchant.id=888464000
+
+enets.merchant.id=897964002
 enets.sales.amount=1000
 #in cents in SGD, 1000 = $10.00
 enets.success.endpoint=https://sgx.sharefc.com/sgx/purchase/success
