--- a/data/src/main/resources/META-INF/properties/prod-sing.application.properties
+++ b/data/src/main/resources/META-INF/properties/prod-sing.application.properties
@@ -2,4 +2,6 @@ elasticsearch.url=http://internal-SGX-Elasticsearch-LB-Prod-2-1553353097.ap-sout
 
 loader.fx.fxBatchSize=100000
 
+loader.cron=0 30 20 ? * *
+
 loader.gti.url=https://s3.amazonaws.com/fecs-prod-triggers/sgx/prod-sing/uploads/gti.csv
