--- a/trunk/service/src/main/resources/META-INF/properties/prod-sing.application.properties
+++ b/trunk/service/src/main/resources/META-INF/properties/prod-sing.application.properties
@@ -36,4 +36,5 @@ enets.cancel.redirect=http://qaxwww.sgx.com/wps/portal/sgxweb/home/company_discl
 #Quartz Timers
 quartz.expired.email=0 50 18 1/1 * ? *
 quartz.halfway.email=0 40 21 1/1 * ? *
-quartz.watchlist.email=0 0 23 1/1 * ? *
+#Changed for testing, needs to be shifted back to quartz.watchlist.email=0 0 23 1/1 * ? *
+quartz.watchlist.email=0 0 02 1/1 * ? *
