--- a/service/src/main/resources/META-INF/properties/prod-sing.application.properties
+++ b/service/src/main/resources/META-INF/properties/prod-sing.application.properties
@@ -12,29 +12,29 @@ mail.host=email-smtp.us-east-1.amazonaws.com
 mail.user=AKIAILM2MCZLWH6LLBWQ
 mail.password=AlxnDsap3lIu9w2Zfsvvs4ypqd8YwGFu3bkf4v4j6794
 
-email.site.base=http://qaxwww.sgx.com/wps/portal/sgxweb/home/company_disclosure/stockfacts
-email.base=https://sgx.sharefc.com
+email.site.base=http://sgx.com/wps/portal/sgxweb/home/company_disclosure/stockfacts
+email.base=https://sgx-premium.wealthmsi.com
 email.sender=sgx-noreply@wealthmsi.com
-email.verify.email=https://sgx.sharefc.com/email/verify.html
-email.reset.password=https://sgx.sharefc.com/email/reset.html
-email.reset.confirm=https://sgx.sharefc.com/email/confirm.html
+email.verify.email=https://sgx-premium.wealthmsi.com/email/verify.html
+email.reset.password=https://sgx-premium.wealthmsi.com/email/reset.html
+email.reset.confirm=https://sgx-premium.wealthmsi.com/email/confirm.html
 email.cachable=true
 email.cachable.duration=3600000
 
-#enets.merchant.id=888464000
+enets.merchant.id=888464000
 
-enets.merchant.id=897964002
-enets.sales.amount=1000
+#enets.merchant.id=897964002
+enets.sales.amount=54000
 #in cents in SGD, 1000 = $10.00
-enets.success.endpoint=https://sgx.sharefc.com/sgx/purchase/success
-enets.success.redirect=http://qaxwww.sgx.com/wps/portal/sgxweb/home/company_disclosure/stockfacts/iframe.html?page=22
-enets.fail.endpoint=https://sgx.sharefc.com/sgx/purchase/fail
-enets.fail.redirect=http://qaxwww.sgx.com/wps/portal/sgxweb/home/company_disclosure/stockfacts/iframe.html?page=22
-enets.cancel.endpoint=https://sgx.sharefc.com/sgx/purchase/cancel
-enets.cancel.redirect=http://qaxwww.sgx.com/wps/portal/sgxweb/home/company_disclosure/stockfacts/iframe.html?page=22
+enets.success.endpoint=https://sgx-premium.wealthmsi.com/sgx/purchase/success
+enets.success.redirect=http://sgx.com/wps/portal/sgxweb/home/company_disclosure/stockfacts/iframe.html?page=22
+enets.fail.endpoint=https://sgx-premium.wealthmsi.com/sgx/purchase/fail
+enets.fail.redirect=http://sgx.com/wps/portal/sgxweb/home/company_disclosure/stockfacts/iframe.html?page=22
+enets.cancel.endpoint=https://sgx-premium.wealthmsi.com/sgx/purchase/cancel
+enets.cancel.redirect=http://sgx.com/wps/portal/sgxweb/home/company_disclosure/stockfacts/iframe.html?page=22
 
 #Quartz Timers
 quartz.expired.email=0 50 18 1/1 * ? *
 quartz.halfway.email=0 40 21 1/1 * ? *
 #Changed for testing, needs to be shifted back to quartz.watchlist.email=0 0 23 1/1 * ? *
-quartz.watchlist.email=0 0 02 1/1 * ? *
+quartz.watchlist.email=0 11 11 11 11 ?
