--- a/trunk/service/src/main/resources/META-INF/properties/dev.applicaion.properties
+++ b/trunk/service/src/main/resources/META-INF/properties/dev.applicaion.properties
@@ -26,6 +26,8 @@ email.reset.confirm=http://localhost/email/confirm.html
 email.halfway.expiration.notice=http://localhost/halfway.html
 email.trialExpired.notice=http://localhost/email/expired.html
 email.watchlist.alert=http://localhost/email/alerts.html
+#Run alerts in audit only or audit and send email
+email.watchlist.alert.auditAndSendEmail=true
 
 email.halfway.expiration.notice.subject=SGX StockFacts Premium Trial: Buy Now 
 email.trialExpired.notice.subject=SGX StockFacts Premium Trial Has Expired
