--- a/trunk/service/src/main/resources/META-INF/properties/prod-sing.application.properties
+++ b/trunk/service/src/main/resources/META-INF/properties/prod-sing.application.properties
@@ -21,6 +21,9 @@ email.reset.confirm=https://sgx-premium.wealthmsi.com/email/confirm.html
 email.cachable=true
 email.cachable.duration=3600000
 
+#Run alerts in audit only or audit and send email
+email.watchlist.alert.auditAndSendEmail=false
+
 enets.merchant.id=888464000
 
 #enets.merchant.id=897964002
