--- a/trunk/service/src/main/resources/META-INF/properties/prod-us.application.properties
+++ b/trunk/service/src/main/resources/META-INF/properties/prod-us.application.properties
@@ -26,6 +26,9 @@ email.watchlist.alert=http://sgx2.sharefc.com.s3-website-us-east-1.amazonaws.com
 email.cachable=true
 email.cachable.duration=3600000
 
+#Run alerts in audit only or audit and send email
+email.watchlist.alert.auditAndSendEmail=true
+
 enets.merchant.id=897964002
 enets.sales.amount=1000
 #in cents in SGD, 1000 = $10.00
