Watch lists Alerts - Switch for audit and send email

--- a/service/src/main/resources/META-INF/properties/application.properties
+++ b/service/src/main/resources/META-INF/properties/application.properties
@@ -28,6 +28,8 @@ email.reset.confirm=https://sgx2.sharefc.com/email/confirm.html
 email.halfway.expiration.notice=http://sgx2.sharefc.com.s3-website-us-east-1.amazonaws.com/email/halfway.html
 email.trialExpired.notice=http://sgx2.sharefc.com.s3-website-us-east-1.amazonaws.com/email/expired.html
 email.watchlist.alert=http://sgx2.sharefc.com.s3-website-us-east-1.amazonaws.com/email/alerts.html
+#Run alerts in audit only or audit and send email
+email.watchlist.alert.auditAndSendEmail=true
 
 email.halfway.expiration.notice.subject=SGX StockFacts Premium Trial: Buy Now 
 email.trialExpired.notice.subject=SGX StockFacts Premium Trial Has Expired
