--- a/service/src/main/resources/META-INF/properties/prod-us.application.properties
+++ b/service/src/main/resources/META-INF/properties/prod-us.application.properties
@@ -42,4 +42,4 @@ enets.cancel.redirect=https://sgx2.sharefc.com/iframe.html?page=22
 #Quartz Timers
 quartz.expired.email=0 0 17 1/1 * ? *
 quartz.halfway.email=0 30 18 1/1 * ? *
-quartz.watchlist.email=0 0 0/1 1/1 * ? *
+quartz.watchlist.email=0 0 23 1/1 * ? *
