--- a/trunk/data/src/main/resources/META-INF/properties/application.properties
+++ b/trunk/data/src/main/resources/META-INF/properties/application.properties
@@ -41,6 +41,6 @@ loader.base.dir=/mnt/data/
 loader.raw.dir=/mnt/data/raw/
 loader.companies.dir=/mnt/data/companies/
 loader.ftp.baseFiles=companies.csv,currencies.csv,fx-conversion.csv,notfound.csv
-loader.ftp.rawFiles=company-data.csv,consensus-estimates.csv,dividend-history.csv,key-devs.csv,ownership.csv
+loader.ftp.rawFiles=company-data.csv,consensus-estimates.csv,dividend-history.csv,key-devs.csv,ownership.csv,adjustment-factor.csv
 loader.vwap.url=http://infopub.sgx.com/SitePages/StockNIndices_SnPValVol.aspx
 loader.gti.url=https://s3.amazonaws.com/fecs-prod-triggers/sgx/dev/uploads/gti.csv
