--- a/data/src/main/resources/META-INF/properties/prod-us.application.properties
+++ b/data/src/main/resources/META-INF/properties/prod-us.application.properties
@@ -1,7 +1,7 @@
 elasticsearch.url=http://sgx-elb-us.sharefc.com:9200
 
 
-loader.cron=0 30 09 ? * * 
+loader.cron=0 0 17 1/1 * ? * 
 
 loader.fx.fxBatchSize=70000
 loader.gti.url=https://s3.amazonaws.com/fecs-prod-triggers/sgx/prod-us/uploads/gti.csv
