--- a/trunk/xf-export/XFDataDump/XFDataDump/App.config
+++ b/trunk/xf-export/XFDataDump/XFDataDump/App.config
@@ -10,18 +10,26 @@
     <!-- 0 debug, 1 info, 2 error -->
     <add key="logLevel" value="0" />
     <add key="tmpDir" value="C:\sgx\output\{0:MMddyyhhss}\" />
+    
     <add key="sqlDir" value="C:\sgx\queries\" />
     <add key="archiveFile" value="C:\sgx\archive\{0:MMddyyhhss}.zip" />
+    <add key="sgxLog" value="C:\sgx\logs\{0:MMddyyhhss}.zip.log" />
+    
     <add key="tickerURL" value="http://infopub.sgx.com/SitePages/StockNIndices_SnPDetails.aspx" />
     <add key="xtraTickerURL" value="http://infopub.sgx.com/sitepages/StockNIndices_ASEANList.aspx" />
-    <add key="sgxLog" value="C:\sgx\logs\{0:MMddyyhhss}.zip.log" />
+    <add key="RemoveDuplicateTickers" value="true" />
+    
+
     <add key="companiesFileName" value="companies.csv" />
     <add key="currenciesFileName" value="currencies.csv" />
     <add key="notFoundFileName" value="notfound.csv" />
     <add key="companiesTableName" value="##sgxpop" />
+    
+    <!-- SFTP Location to push files to -->
     <add key="ftpURL" value="ftp.visitfc.com" />
     <add key="ftpUsername" value="SGX" />
     <add key="ftpPassword" value="8NTkcAy4Lm_k" />
+    <add key="ftpDirectory" value="/home/SGX/XpressFeed_QA" />
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
