--- a/trunk/xf-export/XFDataDump/XFDataDump/packages.config
+++ b/trunk/xf-export/XFDataDump/XFDataDump/packages.config
@@ -4,4 +4,5 @@
   <package id="EnterpriseLibrary.Logging" version="6.0.1304.0" targetFramework="net45" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net45" />
   <package id="SSH.NET" version="2013.4.7" targetFramework="net45" />
+  <package id="Wmsi.Utilities.ExceptionManagement" version="1.0" targetFramework="net45" />
 </packages>
