Testing a new property

--- a/service/src/main/resources/META-INF/properties/application.properties
+++ b/service/src/main/resources/META-INF/properties/application.properties
@@ -58,3 +58,6 @@ enets.cancel.redirect=https://www.amazon.com
 quartz.expired.email=0 50 18 1/1 * ? *
 quartz.halfway.email=0 40 21 1/1 * ? *
 quartz.watchlist.email=0 0 0 1/1 * ? *
+
+#Testing a new property 
+test.prop = 10
