End to end encryption implementation

--- a/branches/encryption/service/src/main/resources/META-INF/properties/prod-sing.application.properties
+++ b/branches/encryption/service/src/main/resources/META-INF/properties/prod-sing.application.properties
@@ -41,3 +41,7 @@ quartz.expired.email=0 50 18 1/1 * ? *
 quartz.halfway.email=0 40 21 1/1 * ? *
 #Changed for testing, needs to be shifted back to quartz.watchlist.email=0 0 23 1/1 * ? *
 quartz.watchlist.email=0 11 11 11 11 ?
+
+#RSA key files path
+rsakey.filepath.public=/keys/sgx-key.pub
+rsakey.filepath.private=/keys/sgx-key.pri
