--- a/branches/encryption/service/src/main/resources/META-INF/properties/prod-us.application.properties
+++ b/branches/encryption/service/src/main/resources/META-INF/properties/prod-us.application.properties
@@ -1,4 +1,4 @@
-elasticsearch.url=http://sgx-elb-us.sharefc.com:9200
+elasticsearch.url=http://internal-SGX-ElasticsearchLoadBalancer-596550831.us-east-1.elb.amazonaws.com:9200
 
 database.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
 database.url=jdbc:sqlserver://sgx-uat.ccqe0wbnbfwr.us-east-1.rds.amazonaws.com:1433;databaseName=sgx;
@@ -45,5 +45,5 @@ quartz.halfway.email=0 30 18 1/1 * ? *
 quartz.watchlist.email=0 0 23 1/1 * ? *
 
 #RSA key files path
-rsakey.filepath.public=/keys/sgx-key.pub
-rsakey.filepath.private=/keys/sgx-key.pri
+rsakey.filepath.public=/mnt/sgx-ecomm/login-key.pub
+rsakey.filepath.private=/mnt/sgx-ecomm/login-key.pri
