--- a/branches/encryption/service/src/main/resources/META-INF/properties/application.properties
+++ b/branches/encryption/service/src/main/resources/META-INF/properties/application.properties
@@ -60,5 +60,5 @@ quartz.halfway.email=0 40 21 1/1 * ? *
 quartz.watchlist.email=0 0 0 1/1 * ? *
 
 #RSA key files path
-rsakey.filepath.public=/keys/sgx-key.pub
-rsakey.filepath.private=/keys/sgx-key.pri
+rsakey.filepath.public=/mnt/sgx-ecomm/login-key.pub
+rsakey.filepath.private=/mnt/sgx-ecomm/login-key.pri
