--- a/branches/encryption/service/src/main/resources/META-INF/properties/prod-sing.application.properties
+++ b/branches/encryption/service/src/main/resources/META-INF/properties/prod-sing.application.properties
@@ -43,5 +43,5 @@ quartz.halfway.email=0 40 21 1/1 * ? *
 quartz.watchlist.email=0 11 11 11 11 ?
 
 #RSA key files path
-rsakey.filepath.public=/keys/sgx-key.pub
-rsakey.filepath.private=/keys/sgx-key.pri
+rsakey.filepath.public=/mnt/sgx-ecomm/login-key.pub
+rsakey.filepath.private=/mnt/sgx-ecomm/login-key.pri
