removing quotes from property file

--- a/data/src/main/resources/META-INF/properties/prod-us.application.properties
+++ b/data/src/main/resources/META-INF/properties/prod-us.application.properties
@@ -6,7 +6,7 @@ loader.cron=0 50 18 ? * *
 loader.fx.fxBatchSize=70000
 loader.gti.url=https://s3.amazonaws.com/fecs-prod-triggers/sgx/prod-us/uploads/gti.csv
 
-loader.fx.file="/mnt/data/qa-fx-conversion.csv"
+loader.fx.file=/mnt/data/qa-fx-conversion.csv
 
 loader.ftp.baseFiles=qa-companies.csv,qa-currencies.csv,qa-fx-conversion.csv,qa-notfound.csv
 loader.ftp.rawFiles=qa-company-data.csv,qa-consensus-estimates.csv,qa-dividend-history.csv,qa-key-devs.csv,qa-ownership.csv,qa-adjustment-factor.csv
