Adding /mnt/data/companies/{Directories} into application properties from hard coded data

--- a/data/src/main/resources/META-INF/properties/application.properties
+++ b/data/src/main/resources/META-INF/properties/application.properties
@@ -13,7 +13,15 @@ elasticsearch.index.twd.prefix=twd_premium_
 
 elasticsearch.previousDay.index.alias=sgd_premium_previous
 
-elasticsearch.index.liveIndexes=sgx,sgx_premium,sgx_premium_previous,sgd_premium,sgd_premium_previous,usd_premium,hkd_premium,idr_premium,myr_premium,php_premium,thb_premium,twd_premium  
+elasticsearch.index.liveIndexes=sgx,sgx_premium,sgx_premium_previous,sgd_premium,sgd_premium_previous,usd_premium,hkd_premium,idr_premium,myr_premium,php_premium,thb_premium,twd_premium
+
+
+loader.company-data.dir=company-data
+loader.consensus-estimates.dir=consensus-estimates
+loader.dividend-history.dir=dividend-history
+loader.key-devs.dir=key-devs
+loader.ownership.dir=ownership 
+loader.adjustment-factor.dir=adjustment-factor 
 
 loader.threads=25
 loader.cron=0 50 18 ? * *
