Removing space at the end of the property

--- a/data/src/main/resources/META-INF/properties/prod-sing.application.properties
+++ b/data/src/main/resources/META-INF/properties/prod-sing.application.properties
@@ -10,5 +10,13 @@ loader.fx.file=/mnt/data/fx-conversion.csv
 loader.ticker.file=/mnt/data/companies.csv
 loader.fx.file=/mnt/data/fx-conversion.csv
 
+#Please make sure there is no space at the end of property
+loader.company-data.dir=company-data
+loader.consensus-estimates.dir=consensus-estimates
+loader.dividend-history.dir=dividend-history
+loader.key-devs.dir=key-devs
+loader.ownership.dir=ownership
+loader.adjustment-factor.dir=adjustment-factor
+
 loader.ftp.baseFiles=companies.csv,currencies.csv,fx-conversion.csv,notfound.csv
 loader.ftp.rawFiles=company-data.csv,consensus-estimates.csv,dividend-history.csv,key-devs.csv,ownership.csv,adjustment-factor.csv
