--- a/service/src/main/resources/META-INF/properties/prod-sing.application.properties
+++ b/service/src/main/resources/META-INF/properties/prod-sing.application.properties
@@ -41,3 +41,8 @@ quartz.expired.email=0 50 18 1/1 * ? *
 quartz.halfway.email=0 40 21 1/1 * ? *
 #Changed for testing, needs to be shifted back to quartz.watchlist.email=0 0 23 1/1 * ? *
 quartz.watchlist.email=0 11 11 11 11 ?
+
+#RSA key files path
+rsakey.filepath.public=/mnt/sgx-login-keys/login-key.pub
+rsakey.filepath.private=/mnt/sgx-login-keys/login-key.pri
+email.rsakeysmissing.reciever=SGXSupport@dstsystems.com
