auditAnsSendEmail flag is set to false as decided for this release

--- a/service/src/main/resources/META-INF/properties/prod-sing.application.properties
+++ b/service/src/main/resources/META-INF/properties/prod-sing.application.properties
@@ -22,7 +22,7 @@ email.cachable=true
 email.cachable.duration=3600000
 
 #Run alerts in audit only or audit and send email
-email.watchlist.alert.auditAndSendEmail=true
+email.watchlist.alert.auditAndSendEmail=false
 
 enets.merchant.id=888464000
 
