changing static HTML file locations on portfolio Branch

--- a/branches/portfolio/service/src/main/resources/META-INF/properties/prod-us.application.properties
+++ b/branches/portfolio/service/src/main/resources/META-INF/properties/prod-us.application.properties
@@ -15,15 +15,15 @@ mail.password=AlxnDsap3lIu9w2Zfsvvs4ypqd8YwGFu3bkf4v4j6794
 
 currencies.file.location=/mnt/data/currencies.csv
 
-email.site.base=https://sgx2.sharefc.com/iframe.html
-email.base=http://sgx2.sharefc.com.s3-website-us-east-1.amazonaws.com
+email.site.base=https://sgxqa2.sharefc.com/iframe.html
+email.base=http://sgxqa2.sharefc.com.s3-website-us-east-1.amazonaws.com
 email.sender=sgx-noreply@wealthmsi.com
-email.verify.email=http://sgx2.sharefc.com.s3-website-us-east-1.amazonaws.com/email/verify.html
-email.reset.password=http://sgx2.sharefc.com.s3-website-us-east-1.amazonaws.com/email/reset.html
-email.reset.confirm=http://sgx2.sharefc.com.s3-website-us-east-1.amazonaws.com/email/confirm.html
-email.halfway.expiration.notice=http://sgx2.sharefc.com.s3-website-us-east-1.amazonaws.com/email/halfway.html
-email.trialExpired.notice=http://sgx2.sharefc.com.s3-website-us-east-1.amazonaws.com/email/expired.html
-email.watchlist.alert=http://sgx2.sharefc.com.s3-website-us-east-1.amazonaws.com/email/alerts.html
+email.verify.email=http://sgxqa2.sharefc.com.s3-website-us-east-1.amazonaws.com/email/verify.html
+email.reset.password=http://sgxqa2.sharefc.com.s3-website-us-east-1.amazonaws.com/email/reset.html
+email.reset.confirm=http://sgxqa2.sharefc.com.s3-website-us-east-1.amazonaws.com/email/confirm.html
+email.halfway.expiration.notice=http://sgxqa2.sharefc.com.s3-website-us-east-1.amazonaws.com/email/halfway.html
+email.trialExpired.notice=http://sgxqa2.sharefc.com.s3-website-us-east-1.amazonaws.com/email/expired.html
+email.watchlist.alert=http://sgxqa2.sharefc.com.s3-website-us-east-1.amazonaws.com/email/alerts.html
 email.cachable=true
 email.cachable.duration=3600000
 
@@ -33,12 +33,12 @@ email.watchlist.alert.auditAndSendEmail=true
 enets.merchant.id=897964002
 enets.sales.amount=1000
 #in cents in SGD, 1000 = $10.00
-enets.success.endpoint=https://sgx2.sharefc.com/sgx/purchase/success
-enets.success.redirect=https://sgx2.sharefc.com/iframe.html?page=22
-enets.fail.endpoint=https://sgx2.sharefc.com/sgx/purchase/fail
-enets.fail.redirect=https://sgx2.sharefc.com/iframe.html?page=22
-enets.cancel.endpoint=https://sgx2.sharefc.com/sgx/purchase/cancel
-enets.cancel.redirect=https://sgx2.sharefc.com/iframe.html?page=22
+enets.success.endpoint=https://sgxqa2.sharefc.com/sgx/purchase/success
+enets.success.redirect=https://sgxqa2.sharefc.com/iframe.html?page=22
+enets.fail.endpoint=https://sgxqa2.sharefc.com/sgx/purchase/fail
+enets.fail.redirect=https://sgxqa2.sharefc.com/iframe.html?page=22
+enets.cancel.endpoint=https://sgxqa2.sharefc.com/sgx/purchase/cancel
+enets.cancel.redirect=https://sgxqa2.sharefc.com/iframe.html?page=22
 
 #Quartz Timers
 quartz.expired.email=0 0 17 1/1 * ? *
