changing email site base to lb url

--- a/branches/patch1.5/service/src/main/resources/META-INF/properties/prod-us.application.properties
+++ b/branches/patch1.5/service/src/main/resources/META-INF/properties/prod-us.application.properties
@@ -15,7 +15,7 @@ mail.password=AlxnDsap3lIu9w2Zfsvvs4ypqd8YwGFu3bkf4v4j6794
 
 currencies.file.location=/mnt/data/currencies.csv
 
-email.site.base=https://sgxqa3.sharefc.com/iframe.html
+email.site.base=https://SGX-US-3-UI-383012566.us-east-1.elb.amazonaws.com/iframe.html
 email.base=http://sgxqa3.sharefc.com.s3-website-us-east-1.amazonaws.com
 email.sender=sgx-noreply@wealthmsi.com
 email.verify.email=http://sgxqa3.sharefc.com.s3-website-us-east-1.amazonaws.com/email/verify.html
