Updated XFDataDump to read SQL file from disk and not application executable resources

--- a/trunk/xf-export/XFDataDump/XFDataDump/App.config
+++ b/trunk/xf-export/XFDataDump/XFDataDump/App.config
@@ -10,7 +10,8 @@
     <!-- 0 debug, 1 info, 2 error -->
     <add key="logLevel" value="0" />
     <add key="tmpDir" value="C:\sgx\output\{0:MMddyyhhss}\" />
-    
+
+    <add key="sqlPreprocess" value="C:\sgx\sql_preprocess\" />
     <add key="sqlDir" value="C:\sgx\queries\" />
     <add key="archiveFile" value="C:\sgx\archive\{0:MMddyyhhss}.zip" />
     <add key="sgxLog" value="C:\sgx\logs\{0:MMddyyhhss}.zip.log" />
