--- a/trunk/xf-export/XFDataDump/XFDataDump/XFDataDump.csproj
+++ b/trunk/xf-export/XFDataDump/XFDataDump/XFDataDump.csproj
@@ -107,7 +107,9 @@
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Properties\app.manifest">
       <SubType>Designer</SubType>
     </None>
