898:Dynamic loading of currencies.If you sync to this checkin please run following commands
USE [sgx]
GO

/****** Object:  Table [dbo].[currencies]    Script Date: 7/6/2016 12:36:53 PM ******/
SET ANSI_NULLS ON
GO

SET QUOTED_IDENTIFIER ON
GO

SET ANSI_PADDING ON
GO

CREATE TABLE [dbo].[currencies](
	[currency_name] [varchar](250) NOT NULL,
	[description] [varchar](500) NULL,
	[complete] [bit] NULL
) ON [PRIMARY]

GO

SET ANSI_PADDING OFF
GO

--- a/branches/release2.0/data/src/main/resources/META-INF/properties/application.properties
+++ b/branches/release2.0/data/src/main/resources/META-INF/properties/application.properties
@@ -15,6 +15,16 @@ elasticsearch.previousDay.index.alias=sgd_premium_previous
 
 elasticsearch.index.liveIndexes=sgx,sgx_premium,sgx_premium_previous,sgd_premium,sgd_premium_previous,usd_premium,hkd_premium,idr_premium,myr_premium,php_premium,thb_premium,twd_premium
 
+database.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
+database.url=jdbc:sqlserver://localhost:1433;databaseName=sgx;
+database.user=sa
+database.password=P@ssw0rd12
+database.initialSize=10
+database.maxTotal=10
+database.maxIdle=10
+database.validationQuery=SELECT 1
+database.maxConnLifetimeMillis=480000
+
 
 loader.company-data.dir=company-data
 loader.consensus-estimates.dir=consensus-estimates
@@ -23,7 +33,7 @@ loader.key-devs.dir=key-devs
 loader.ownership.dir=ownership
 loader.adjustment-factor.dir=adjustment-factor
 
-loader.threads=25
+loader.threads=1
 loader.cron=0 50 18 ? * *
 loader.workdir=/tmp/sgx/
 
