--- a/branches/898/pom.xml
+++ b/branches/898/pom.xml
@@ -314,6 +314,17 @@
 			<artifactId>stringtemplate</artifactId>
 			<version>3.2</version>
 		</dependency>
+    	<dependency>
+      		<groupId>org.thymeleaf</groupId>
+     		<artifactId>thymeleaf</artifactId>
+      		<version>2.1.4.RELEASE</version>
+    	</dependency>
+    
+		<dependency>
+      		<groupId>org.thymeleaf</groupId>
+      		<artifactId>thymeleaf-spring3</artifactId>
+      		<version>2.1.4.RELEASE</version>
+    	</dependency>
 
 
 		<dependency>
