Updated Database property with QA2

--- a/branches/898/src/main/resources/META-INF/properties/prod-us.application.properties
+++ b/branches/898/src/main/resources/META-INF/properties/prod-us.application.properties
@@ -33,8 +33,8 @@ mail.host=email-smtp.us-east-1.amazonaws.com
 mail.user=AKIAILM2MCZLWH6LLBWQ
 mail.password=AlxnDsap3lIu9w2Zfsvvs4ypqd8YwGFu3bkf4v4j6794
 
+database.url=jdbc:sqlserver://sgx-qa2.ccqe0wbnbfwr.us-east-1.rds.amazonaws.com:1433;databaseName=sgx;
 database.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
-database.url=jdbc:sqlserver://sgx-uat.ccqe0wbnbfwr.us-east-1.rds.amazonaws.com:1433;databaseName=sgx;
 database.user=sgx_uat 
 database.password=SGXPremiumData$
 database.initialSize=100
