Chainging ES url for testing will revert after data load

--- a/data/src/main/resources/META-INF/properties/prod-us.application.properties
+++ b/data/src/main/resources/META-INF/properties/prod-us.application.properties
@@ -1,5 +1,5 @@
-elasticsearch.url=http://internal-SGX-ElasticsearchLoadBalancer-596550831.us-east-1.elb.amazonaws.com:9200
-
+#elasticsearch.url=http://internal-SGX-ElasticsearchLoadBalancer-596550831.us-east-1.elb.amazonaws.com:9200
+elasticsearch.url=http://internal-SGX-ELasticsearchLB-QA2-1156180289.us-east-1.elb.amazonaws.com:9200
 #Cron expression must consist of 6 fields
 loader.cron=0 50 18 ? * * 
 
