--- a/branches/release2.0/data/src/main/resources/META-INF/properties/prod-us.application.properties
+++ b/branches/release2.0/data/src/main/resources/META-INF/properties/prod-us.application.properties
@@ -1,7 +1,6 @@
-elasticsearch.url=http://10.0.1.100:9200
-#elasticsearch.url=http://internal-SGX-ElasticsearchLoadBalancer-596550831.us-east-1.elb.amazonaws.com:9200
+elasticsearch.url=http://SGX3-ElasticSearchLoadBalancer-388170202.us-east-1.elb.amazonaws.com:9200
    
-#Cron expression must consist of 6 fields
+
 loader.cron=0 50 18 ? * * 
 
 loader.fx.fxBatchSize=70000
