Using Gzipfilter to compress the response

--- a/branches/portfolio/service/src/main/webapp/WEB-INF/web.xml
+++ b/branches/portfolio/service/src/main/webapp/WEB-INF/web.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 
-<!DOCTYPE web-app 
-    PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN" 
-    "http://java.sun.com/dtd/web-app_2_3.dtd">
-
-<web-app>
+<web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+	metadata-complete="true" version="3.0">
 
 	<error-page>
 		<error-code>404</error-code>
@@ -15,5 +13,13 @@
 		<exception-type>java.lang.Throwable</exception-type>
 		<location>/error.html</location>
 	</error-page>
+	<filter>
+	    <filter-name>GzipFilter</filter-name>
+        <filter-class>net.sf.ehcache.constructs.web.filter.GzipFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>GzipFilter</filter-name>
+        <url-pattern>/sgx/*</url-pattern>
+    </filter-mapping>
 	
 </web-app>
